<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱心屋</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">actionSetting</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_buy">Buy</string>

    <string name="more">更多</string>

    <string name="home">首页</string>

    <string name="homepage">主页</string>
    <string name="usedDeal">交易</string>
    <string name="shopCart">购物车</string>

    <string name="home_pic">爱心屋logo</string>
    <string name="home_info">----  最新通知  ----</string>
    <string name="home_commodity">----  新品上架  ----</string>
    <string name="home_deal">----  人气物品  ----</string>
    <string name="pressAgain">再按一次退出程序</string>
    <string name="axw_info">
        上海交通大学“绿色爱心屋”是一个全新的慈善公益捐赠平台。以“服务交大师生，创建和谐校园”
        为宗旨。以“爱心、公益、透明、环保、低碳、绿色”为理念。积极开展慈善捐赠、公益服务等爱心活动。
    </string>

    <string name="net_err_info">网络不给力，请检查网络设置</string>

    <string name="welcome_reserve">&#169;2018 All rights reserved</string>
    <string name="add_attention">加关注</string>
    <string name="user_post">用户组：学生</string>
    <string name="user_book">交易单数：13</string>
    <string name="user_name">梁玉鼎</string>
    <string name="user_des">书山有路勤为径，学海无涯诺亚舟</string>
    <string name="user_recommend_tip">消息中心</string>

    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="tab0">我的购买</string>
    <string name="tab1">我的捐赠</string>
    <string name="tab2">我的发布</string>
    <string name="tab3">我的收藏</string>
    <string name="shareApp">下载使用爱心屋App\nhttp://salary.aixinwu.info/apk/axw.apk</string>
    <string name="shareApp_choser_label">分享到</string>
    <string name="permission_denied_info">这样无法将app下载到本机存储空间╮(╯﹏╰）╭</string>

    <string name="activity_settings">设置</string>
    <!-- Preference -->
    <string name="pref_show_slider_key" translatable="false">showSlider</string>
    <string name="pref_show_slider_title">显示主页滑动图片</string>
    <string name="pref_show_slider_on">已开启</string>
    <string name="pref_show_slider_off">已关闭</string>

    <string name="pref_start_img_key" translatable="false">startImg</string>
    <string name="pref_start_img_title">显示启动页bing图片</string>
    <string name="pref_start_img_on">已开启</string>
    <string name="pref_start_img_off">已关闭</string>

    <string name="pref_size_key" translatable="false">size</string>
    <string name="pref_size_title">主页专区最多展示商品数</string>
    <string name="pref_size_default">6</string>
    <string name="pref_size_label_3" translatable="false">3</string>
    <string name="pref_size_label_6" translatable="false">6</string>
    <string name="pref_size_label_9" translatable="false">9</string>
    <string name="pref_size_label_12" translatable="false">12</string>
    <string name="pref_size_3_value" translatable="false">3</string>
    <string name="pref_size_6_value" translatable="false">6</string>
    <string name="pref_size_9_value" translatable="false">9</string>
    <string name="pref_size_12_value" translatable="false">12</string>

    <string name="pref_display_key" translatable="false">displayMode</string>
    <string name="pref_display_title">物品展示模式选择</string>
    <string name="pref_display_default">0</string>
    <string name="pref_display_label_doubleColumn">双列</string>
    <string name="pref_display_label_singleColumn">单列</string>
    <string name="pref_display_doubleColumn_value" translatable="false">0</string>
    <string name="pref_display_singleColumn_value" translatable="false">1</string>

    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_title">主题颜色</string>
    <string name="pref_theme_default">0</string>
    <string name="pref_theme_label_ag">Aixinwu Green</string>
    <string name="pref_theme_label_sb">Seiee Blue</string>
    <string name="pref_theme_label_uv">Ultra Violet</string>
    <string name="pref_theme_label_co">Chili Oil</string>
    <string name="pref_theme_label_lb">Little Boy Blue</string>
    <string name="pref_theme_label_ar">Arcadia</string>
    <string name="pref_theme_label_em">Emperador</string>
    <string name="pref_theme_ag_value" translatable="false">0</string>
    <string name="pref_theme_sb_value" translatable="false">1</string>
    <string name="pref_theme_uv_value" translatable="false">2</string>
    <string name="pref_theme_co_value" translatable="false">3</string>
    <string name="pref_theme_lb_value" translatable="false">4</string>
    <string name="pref_theme_ar_value" translatable="false">5</string>
    <string name="pref_theme_em_value" translatable="false">6</string>

    <string name="pref_bind_JAccount_key" translatable="false">bindJA</string>
    <string name="pref_bind_JAccount_title">绑定JAccount</string>
    <string name="pref_check_update_key">checkUP</string>
    <string name="pref_check_update_title">检查更新</string>

    <string name="pref_feedback_key" translatable="false">feedback</string>
    <string name="pref_feedback_title">意见反馈</string>
    <string name="pref_rabj_key" translatable="false">registreAndBindJA</string>
    <string name="pref_rabj_title">注册与JAccount绑定</string>

    <string name="minhang">上海交通大学闵行校区</string>
    <string name="xuhui">上海交通大学徐汇校区</string>
</resources>